# libwdcap

./: README.md  configure.ac  debpkg-setup.sh
.github/workflows/: deb-build.yaml
debian/: changelog  control  copyright  libwdcap1-dev.install  libwdcap1.install  rules
examples/: disktest.c  disktest.yaml  tracecapd.c
src/: Anon.cc  HeaderWalk.cc  HeaderWalk.h  Makefile.am  WdcapAnon.h  WdcapDiskWriter.cc  WdcapDiskWriter.h  WdcapPacketProcessor.cc  WdcapPacketProcessor.h
